jbr jcef (#1038)
* Reapply "Replace desktop web video source resolver from selenium to java-cef (#1035)"

This reverts commit 23739f975b1333de79d2c0e186f46b543db5fd92.

* use JBR jcef

* set jvm toolchain to JBR

* adapt to jbr

* remove RequestWillBeSent

* Set jvmToolchain for all source sets

* Update foojay resolver version

* Reapply missing doc changes

* Support macos

* Update CONTRIBUTING.md

* fixup

* init CefLog eagerly

* wrap cef methods to AWT thread.

* -Dsun.java2d.metal=true

* Set jvm toolchain vendor & version from gradle.properties

* Fix macos packaging

* use jbr 21

* Remove unused code

* actions: setup jbr

* Fix package dmg

* fix configuration cache

* Fix macos package

* Remove old jdk

* Update jbr in CONTRIBUTING.md

* copy missing jcef files

* update CONTRIBUTING.md

* Remove unnecessary code

* Revert "Remove unnecessary code"

This reverts commit 147fc883572c017ada9d2df32ed6491978e1f1b9.

* Remove unnecessary code

* fix windows

---------

Co-authored-by: Him188 <Him188@mamoe.net>